# Web y Backend/Backend/swagger/swagger.json
@@ -508,9 +508,47 @@
                 "tags": [
                     "categoria"
                 ],
-                "summary": "Devuelve todas las categorías",
-                "description": "Devuelve todas las categorías",
-                "operationId": "categoriaAll",
+                "summary": "Devuelve las categorías por default",
+                "description": "Devuelve las categorías por default",
+                "produces": [
+                    "application/json"
+                ],
+                "parameters": [
+                    {
+                        "name": "user_id",
+                        "in": "path",
+                        "description": "Id de usuario",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "name": "api_key",
+                        "in": "path",
+                        "description": "Api Key del usuario",
+                        "required": true,
+                        "type": "string"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "successful operation"
+                    },
+                    "400": {
+                        "description": "Invalid username/password supplied"
+                    },
+                    "500": {
+                        "description": "Internal server error"
+                    }
+                }
+            }
+        },
+        "/categoria/complete/{user_id}/{api_key}": {
+            "get": {
+                "tags": [
+                    "categoria"
+                ],
+                "summary": "Devuelve las 'otras' categorías",
+                "description": "Devuelve las 'otras' categorías",
                 "produces": [
                     "application/json"
                 ],
@@ -1660,6 +1698,45 @@
                 ],
                 "summary": "Devuelve todos los patrocinadores ordenados alfabeticamente",
                 "description": "Devuelve todos los patrocinadores ordenados alfabeticamente",
+                "produces": [
+                    "application/json"
+                ],
+                "parameters": [
+                    {
+                        "name": "user_id",
+                        "in": "path",
+                        "description": "Id de usuario",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "name": "api_key",
+                        "in": "path",
+                        "description": "Api Key del usuario",
+                        "required": true,
+                        "type": "string"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "successful operation"
+                    },
+                    "400": {
+                        "description": "Invalid username/password supplied"
+                    },
+                    "500": {
+                        "description": "Internal server error"
+                    }
+                }
+            }
+        },
+        "/patrocinador/order/stand/{user_id}/{api_key}": {
+            "get": {
+                "tags": [
+                    "patrocinador"
+                ],
+                "summary": "Devuelve todos los patrocinadores ordenados por stand",
+                "description": "Devuelve todos los patrocinadores ordenados por stand",
                 "produces": [
                     "application/json"
                 ],
